--- a/JiaSyuanLibrary/JiaSyuanLibrary.csproj
+++ b/JiaSyuanLibrary/JiaSyuanLibrary.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="CacheManager.StackExchange.Redis" Version="1.1.2" />
     <PackageReference Include="CacheManager.SystemRuntimeCaching" Version="1.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
