--- a/JiaSyuanLibrary/JiaSyuanLibrary.csproj
+++ b/JiaSyuanLibrary/JiaSyuanLibrary.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Helper\CurrencyHelper.cs" />
     <Compile Include="Helper\DateTimeHelper.cs" />
     <Compile Include="Helper\EncryptHelper.cs" />
+    <Compile Include="Helper\FixLenthHelper.cs" />
     <Compile Include="Helper\MapperHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
