--- a/UnitTest/packages.config
+++ b/UnitTest/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Net.Compilers" version="3.3.1" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="3.4.0" targetFramework="net461" developmentDependency="true" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
+  <package id="NUnit" version="3.12.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
-  <package id="Unity" version="5.11.1" targetFramework="net461" />
+  <package id="Unity" version="5.11.2" targetFramework="net461" />
 </packages>
