--- a/JiaSyuanLibrary.Standard/JiaSyuanLibrary.Standard.csproj
+++ b/JiaSyuanLibrary.Standard/JiaSyuanLibrary.Standard.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="DotNetZip" Version="1.13.8" />
   </ItemGroup>
 
   <ItemGroup>
