--- a/JiaSyuanLibrary/packages.config
+++ b/JiaSyuanLibrary/packages.config
@@ -3,7 +3,10 @@
   <package id="AutoMapper" version="9.0.0" targetFramework="net461" />
   <package id="CacheManager.Core" version="1.2.0" targetFramework="net462" />
   <package id="CacheManager.SystemRuntimeCaching" version="1.2.0" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.3" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
