--- a/JiaSyuanLibrary/packages.config
+++ b/JiaSyuanLibrary/packages.config
@@ -3,6 +3,7 @@
   <package id="AutoMapper" version="9.0.0" targetFramework="net461" />
   <package id="CacheManager.Core" version="1.2.0" targetFramework="net462" />
   <package id="CacheManager.SystemRuntimeCaching" version="1.2.0" targetFramework="net462" />
+  <package id="Ionic.Zlib" version="1.9.1.5" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net461" />
