--- a/JiaSyuanLibrary.Standard/JiaSyuanLibrary.Standard.csproj
+++ b/JiaSyuanLibrary.Standard/JiaSyuanLibrary.Standard.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="DotNetZip" Version="1.13.8" />
+    <PackageReference Include="StackExchange.Redis" Version="2.1.58" />
   </ItemGroup>
 
   <ItemGroup>
