--- a/JiaSyuanLibrary/JiaSyuanLibrary.csproj
+++ b/JiaSyuanLibrary/JiaSyuanLibrary.csproj
@@ -154,6 +154,8 @@
     <Compile Include="Enums\EnumContentType.cs" />
     <Compile Include="Helper\ApiHelper.cs" />
     <Compile Include="Helper\AutoMapping\AutoMappingHelper.cs" />
+    <Compile Include="Helper\AutoMapping\MapperFactory.cs" />
+    <Compile Include="Helper\AutoMapping\MappingProfileRegistry.cs" />
     <Compile Include="Helper\CacheHelper.cs" />
     <Compile Include="Helper\CsvFileHelper.cs" />
     <Compile Include="Helper\CurrencyHelper.cs" />
